--- a/pruebaTiempo.html
+++ b/pruebaTiempo.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <script src="time.js"></script>
-<body>
+<body onload="consultarClima()">
     
 </body>
 </html>
