--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <video autoplay muted loop plays-inline class="back-video" src="./fotos/sunrise.mp4" type="video/mp4"></video>
-    <center><audio controls loop src="./fotos/Feel_so_good_Trumpet_.mp3"/></center>
+    <center><audio controls autoplay loop src="./fotos/Feel_so_good_Trumpet_.mp3"/></center>
     
     <div class="contenedor">
         <h1>Consulta del Clima</h1>
